evenframe/src/commands/snapshots/evenframe__commands__init__tests__minimal.snap
---
source: evenframe/src/commands/init.rs
expression: parse(&generate_minimal_config())
---
EvenframeConfig {
    general: GeneralConfig {
        apply_aliases: [],
        include_files: [],
        expand_macros: false,
        env_path: None,
        foreign_types: {},
        output_rule_plugins: {},
        synthetic_item_plugins: {},
    },
    schemasync: Some(
        SchemasyncConfig {
            database: DatabaseConfig {
                provider: Surrealdb,
                url: "${SURREALDB_URL}",
                namespace: "${SURREALDB_NS}",
                database: "${SURREALDB_DB}",
                timeout: 60,
                accesses: Inline(
                    [],
                ),
                functions: None,
                analyzers: None,
                resolved: ResolvedDatabaseItems {
                    access_surql: None,
                    functions_surql: None,
                    analyzers_surql: None,
                },
            },
            should_generate_mocks: false,
            mock_gen_config: SchemasyncMockGenConfig {
                default_record_count: 10,
                default_preservation_mode: Smart,
                full_refresh_mode: false,
                scripting_asserts: true,
            },
            plugins: {},
            lint: LintConfig {
                silence_unverifiable_annotations: false,
            },
        },
    ),
    typesync: TypesyncConfig {
        outputs: [
            TypesyncOutput {
                kind: Arktype,
                dir: "./src/generated",
                file: None,
                files: OutputConfig {
                    mode: Single,
                    barrel_file: false,
                    file_naming: Kebab,
                    file_extension: ".ts",
                    array_style: Shorthand,
                    import_extension: Bare,
                },
                namespace: None,
                package: None,
                import_validate: false,
                macros: {},
            },
        ],
        collision_strategy: Error,
        struct_variants: Named,
    },
    config_file_path: "",
}
